# TIS

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  build-cmake.sh
cmake/: Config.cmake  Coverage.cmake  ExternalDependencies.cmake  Format.cmake  GenerateDocumentation.cmake  Linter.cmake  Testing.cmake
doc/: doxygen_cfg
src/: CMakeLists.txt
src/Track/: CMakeLists.txt
src/Track/include/: Density.h
src/Track/src/: Density.cpp
src/dataassociator/: CMakeLists.txt
src/dataassociator/include/: DataAssociator.h
src/dataassociator/include/tis/: DataAssociator.h
src/dataassociator/interface/tis/: JointHypothesis.h
src/dataassociator/src/: DataAssociator.cpp  JointHypothesis.cpp
src/dataassociator/test/: CMakeLists.txt  DataAssociator_test.cpp
src/hypothesiser/: CMakeLists.txt
src/hypothesiser/include/: Hypothesiser.h
src/hypothesiser/include/tis/: Hypothesiser.h
src/hypothesiser/interface/tis/: Hypothesis.h
src/hypothesiser/src/: Hypothesis.cpp  Hypothesiser.cpp
src/hypothesiser/test/: CMakeLists.txt  Hypothesiser_test.cpp
src/models/: CMakeLists.txt
src/models/include/: ConstantVelocityTransitionModel.h  LinearGaussianMeasurementModel.h
src/models/measurement/: CMakeLists.txt
src/models/measurement/include/tis/: LinearGaussianMeasurementModel.h
src/models/measurement/interface/tis/: MeasurementModel.h
src/models/measurement/src/: LinearGaussianMeasurementModel.cpp
src/models/measurement/test/: CMakeLists.txt  LinearGaussianMeasurementModel_test.cpp
src/models/src/: ConstantVelocityTransitionModel.cpp  LinearGaussianMeasurementModel.cpp
src/models/transition/: CMakeLists.txt
src/models/transition/include/tis/: ConstantVelocityTransitionModel.h
src/models/transition/interface/tis/: TransitionModel.h
src/models/transition/src/: ConstantVelocityTransitionModel.cpp
src/models/transition/test/: CMakeLists.txt  ConstantVelocityTransitionModel_test.cpp
src/predictor/: CMakeLists.txt
src/predictor/include/tis/: EkfPredictor.h
src/predictor/src/: EkfPredictor.cpp
src/predictor/test/: CMakeLists.txt  EkfPredictor_test.cpp
src/track/: CMakeLists.txt
src/track/include/: Track.h
src/track/src/: Density.cpp  Track.cpp
src/tracker/: CMakeLists.txt
src/tracker/include/: Tracker.h
src/tracker/src/: Tracker.cpp
src/types/: CMakeLists.txt
src/types/include/: Association.h  Density.h  Detection.h  Hypothesis.h  JointHypothesis.h  State.h  Track.h  UniqueId.h
src/types/src/: Density.cpp  Detection.cpp  Hypothesis.cpp  JointHypothesis.cpp  State.cpp  Track.cpp  UniqueId.cpp
src/updater/: CMakeLists.txt
src/updater/include/tis/: EkfUpdater.h
src/updater/src/: EkfUpdater.cpp
src/updater/test/: CMakeLists.txt  EkfUpdator_test.cpp
test/: CMakeLists.txt
test/Track/: CMakeLists.txt  Density_test.cpp
test/dataassociator/: DataAssociator_test.cpp
test/hypothesiser/: Hypothesiser_test.cpp
test/models/: ConstantVelocityTransitionModel_test.cpp  LinearGaussianMeasurementModel_test.cpp
test/track/: Density_test.cpp
test/types/: Detection_test.cpp  Hypothesis_test.cpp  JointHypothesis_test.cpp
